# sqltatic

./: .gitignore  Cargo.toml  README.md
docs/: example.yaml
src/: main.rs
