[package]
name = "sqltatic"
version = "0.1.0"
authors = ["Amanda McCann <amanda@technomancy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.64"
anyhow = "1.0"
tokio-postgres = "0.7.5"
tera = "1.6"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
glob = "0.3.0"
fs_extra = "1.2.0"
tokio = { version = "1", features = ["full"] }
username = "0.2.0"
